# spr

./: .editorconfig  .gitignore  Cargo.toml  flake.nix  vm:dev.sh
dev/: sdmin.nix  shell.nix  vm.nix
src/: cli.rs  com.rs  main.rs  obs.rs  task.rs  vsock.rs
